--- a/index.html
+++ b/index.html
@@ -2,74 +2,96 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Christopher Wooster</title>
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img class="top-cloud" src="./assets/cloud.png" alt="top cloud" />
       <h1>I'm Christopher.</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountain.png" alt="mountain-img" />
+      <img class="bottom-cloud" src="./assets/cloud.png" alt="bottom cloud" />
+      <img src="./assets/mountain.png" alt="mountain" />
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/chris.png" alt=round-chris" />
+        <img src="./assets/chris.png" alt="profile image" />
         <h2>Hello.</h2>
         <p class="intro">
-          I am a Web Developer. I enjoy building custom desktop computers.
+          I am a Web Developer. I enjoy building custom computers and 3D
+          printing.
         </p>
       </div>
       <hr />
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img
-            class="skills-img"
-            src="https://media1.giphy.com/media/26n7b7PjSOZJwVCmY/giphy.gif?cid=ecf05e47iezkzo93wzkqy3aux72z3tljl82dpivvgsiqrbkj&rid=giphy.gif&ct=g"
-            alt="browser-code"
-          />
+        <div>
           <h3>Design & Development</h3>
           <p>
-            I have been learning HTML, CSS, Javascript, Python, and React since
-            2020. I look forward to building on my skills and knowledge for a
-            long time to come.
+            I have been learning and using these prgramming languages since
+            2020.
           </p>
+          <div>
+            <div>
+              <img class="skill-lang" src="./assets/html5.png" alt="html5" />
+              <img class="skill-lang" src="./assets/css3.png" alt="css3" />
+              <img
+                class="skill-lang"
+                src="./assets/javascript.png"
+                alt="javascript"
+              />
+            </div>
+            <div>
+              <img class="skill-lang" src="./assets/python.png" alt="python" />
+              <img class="skill-lang" src="./assets/react.png" alt="react" />
+            </div>
+          </div>
         </div>
-        <div class="skill-row">
-          <img class="pc-img" src="images/printed_circuit.jpg" alt="pc" />
-          <h3>Custom Computers</h3>
-          <p>
-            I have been building custom computers since 1998. I have built a
-            wide variety from standard computers, media servers, to high end
-            gaming computers. There is nothing better than having an unnecessary
-            amount of computing power.
-          </p>
+        <div>
+          <div class="pc">
+            <h3>Custom Computers</h3>
+            <div>
+              <img class="pc-img" src="./assets/pc-custom.jpg" alt="desk-pc" />
+              <p>
+                I have been building custom computers since 1998. I have built a
+                wide variety including media servers, high-end gaming systems,
+                and even your average web browsing systems.
+              </p>
+            </div>
+          </div>
+          <div class="printer">
+            <h3>3D Printing</h3>
+            <div>
+              <img
+                class="printer-img"
+                src="./assets/p1p-lack.jpg"
+                alt="printer"
+              />
+              <p>
+                This last year I got hooked on 3D printing. I already had some
+                light experience in CAD. However I quickly moved from Creality
+                Ender to a Bambu Lab P1P.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
       <hr />
-      <div class="contact-me">
+      <div>
         <h2>Get In Touch</h2>
-        <h3>If you love computers as much as I do.</h3>
-        <p class="contact-message">
-          Let's talk about the latest and greatest! We can build and program!
-        </p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>Got 404 errors, BSoDs, or Z Offset problems?</h3>
+        <a class="btn" href="mailto:">CONTACT ME</a>
       </div>
     </div>
-
     <div class="bottom-container">
-      <a
-        class="footer-link"
-        href="https://www.linkedin.com/in/christopher-wooster-6468171b5/"
+      <a class="footer-link" href="https://www.linkedin.com/in/chris-wooster/"
         >LinkedIn</a
       >
       <p class="copyright">©2023 Christopher Wooster.</p>
