--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       <div>
         <h2>Get In Touch</h2>
         <h3>Got 404 errors, BSoDs, or Z Offset problems?</h3>
-        <a class="btn" href="mailto:">CONTACT ME</a>
+        <p>I look forward to hearing from you.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
     <div class="bottom-container">
